add seed data file path

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -25,5 +25,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SeedData": "Infrastructure/Data/Seed/seed-data.json"
 }
