--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,14 +1,18 @@
 {
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss:fff} {Level:u3} {Message:lj}]{NewLine}{Exception}"
+        }
       },
       {
         "Name": "File",
         "Args": {
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss:fff} {Level:u3} {Message:lj}{NewLine}{Exception}]",
           "path": "Logs/applog-.txt",
           "rollingInterval": "Day"
         }
